--- a/style.css
+++ b/style.css
@@ -231,9 +231,27 @@ body.btg {
     height: 100%;
     width: 100%;
     background-color: #08AEEA;
-    background-image: linear-gradient(330deg, #08AEEA 0%, #2AF598 100%);
+    background-image: linear-gradient(330deg, #08AEEA 0%, #5ABAAE 100%);
     background-position: top;
     background-repeat: no-repeat;
 
     color: white;
+}
+
+body.bio {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #ffffff;
+    color: #170727;
+}
+
+.card-shadow {
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+  
+.card-shadow:hover {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
