--- a/style.css
+++ b/style.css
@@ -172,13 +172,13 @@ main .lead p {
 }
 
 .gallery .thumb:nth-child(1) {
-    background: url(assets/img/ls/ls-landing.png) 0 0 no-repeat fixed;
+    background: url(assets/img/lg/lg-1.png) 0 0 no-repeat fixed;
 }
 .gallery .thumb:nth-child(2) {
     background: url(assets/img/pos/pos-1.jpg) center center no-repeat fixed;
 }
 .gallery .thumb:nth-child(3) {
-    background: url(assets/img/bio/bio-login.png) center center no-repeat fixed;
+    background: url(assets/img/bio/clinicalBIO-3.png) center center no-repeat fixed;
 }
 .gallery .thumb:nth-child(4) {
     background: url(assets/img/btg/btg-mockup-pic.png) center 0 no-repeat fixed;
