--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ body.btg {
     color: white;
 }
 
-body.bio {
+body.bio, body.pos {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -246,6 +246,8 @@ body.bio {
     background-color: #ffffff;
     color: #170727;
 }
+
+body.pos p      { color: #72729D; }
 
 .card-shadow {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
