--- a/style.css
+++ b/style.css
@@ -54,6 +54,30 @@ nav {
     color: white !important;
 }
 
+/* 
+.navbar-brand svg {
+    transition: all 0.3s ease-in-out;
+    opacity: 0;
+    height: 100vh;
+    width: 90px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 200;
+}
+
+.navbar-brand svg:hover {
+    opacity: 1;
+    translate: 10%;
+}
+
+.navbar-light .navbar-brand svg {
+    background-color: white;
+}
+.navbar-dark .navbar-brand svg {
+    background-color: #170727;
+} */
+
 nav ul li {
     display: grid;
     grid-template-columns: repeat(1fr, 1fr, 1fr);
@@ -61,13 +85,7 @@ nav ul li {
     text-align: right;
 }
 
-@media (min-width: 992px) {
-    .navbar-expand-lg .navbar-nav .nav-link {
-        padding-right: 2rem;
-        padding-left: 2rem;
-    }
-}
-
+/* GENERAL STYLES */
 .logo {
     justify-self: start;
     align-self: center;
@@ -98,7 +116,6 @@ footer {
 
 header.lead {
     display: block;
-    
     height: 65vh;
     /* margin-top: 120px; */
     text-align: center;
@@ -144,29 +161,6 @@ body.pos p {
 body.delta p a {
     text-decoration: underline;
 }
-/* 
-.navbar-brand svg {
-    transition: all 0.3s ease-in-out;
-    opacity: 0;
-    height: 100vh;
-    width: 90px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 200;
-}
-
-.navbar-brand svg:hover {
-    opacity: 1;
-    translate: 10%;
-}
-
-.navbar-light .navbar-brand svg {
-    background-color: white;
-}
-.navbar-dark .navbar-brand svg {
-    background-color: #170727;
-} */
 
 .gallery {
     display: grid;
@@ -189,71 +183,42 @@ body.delta p a {
 
 .gallery .thumb a {
     color: white;
-    
     font-size: 1.6rem;
     font-weight: 700;
-    
     text-decoration: none;
     width: 100%;
     height: 55vh;
-    
     display: grid;
     align-content: center;
-    
     padding-left: 1rem;
     padding-right: 1rem;
-    
-    /* display: block; */
-    /* padding: 160px 15px; */
-    
-    /* position: relative; */
-    /* top: 50%; */
-    /* transform: translate(0, -50%); */
-    
-    /* background: rgba(23, 7, 39, 0.4), linear-gradient(180deg, rgba(96, 148, 234, 0.4) 0%, rgba(240, 47, 194, 0.7) 100%); */
-    
-    /* background-color: rgba(255, 60, 172, 1); */
-    /* background-image: linear-gradient(180deg, rgba(255, 60, 172, .7) 0%, rgba(120, 75, 160, .7) 50%, rgba(43, 134, 197, .9) 100%); */
-    
     background-image: linear-gradient(180deg, rgba(249, 83, 198, 0.3) 0%, rgba(185, 29, 115, 1) 100%);
-}
-
-.gallery .thumb:nth-child(1),
-.gallery .thumb:nth-child(2),
-.gallery .thumb:nth-child(3),
-.gallery .thumb:nth-child(4),
-.gallery .thumb:nth-child(5),
-.gallery .thumb:nth-child(6) {
-    background-size: contain;
-}
-
-.gallery .thumb:nth-child(1) {
-    background: url(assets/img/lg/lg-article.png) bottom center no-repeat fixed;
-    background-size: cover;
-}
-.gallery .thumb:nth-child(2) {
-    background: url(assets/img/pos/pos-mock-1.jpg) center no-repeat fixed;
-}
-.gallery .thumb:nth-child(3) {
-    background: url(assets/img/bio/clinicalBIO-3.png) center center no-repeat fixed;
-}
-.gallery .thumb:nth-child(4) {
-    background: url(assets/img/btg/btg-mockup-pic.png) center center no-repeat fixed;
-    background-size: cover;
-}
-.gallery .thumb:nth-child(5) {
-    background: url(assets/img/santander/encolador-proto.png) center right no-repeat fixed;
-}
-.gallery .thumb:nth-child(6) {
-    background-size: cover;
-    background: url(assets/img/delta/delta.jpg) top right no-repeat fixed;
 }
 
 .gallery .thumb a:hover {
     background-color: rgba(238, 130, 238, 0.8);
     color: white;
-    /* top: -2px; */
+    top: -2px;
     transition: all 0.6s ease;
+}
+
+.gallery .thumb:nth-child(1) {
+    background: bottom center / cover no-repeat url(assets/img/lg/lg-article.png) fixed;
+}
+.gallery .thumb:nth-child(2) {
+    background: center / cover no-repeat url(assets/img/pos/pos-mock-1.jpg) fixed;
+}
+.gallery .thumb:nth-child(3) {
+    background: center / cover no-repeat url(assets/img/bio/clinicalBIO-3.png) fixed;
+}
+.gallery .thumb:nth-child(4) {
+    background: center / cover no-repeat url(assets/img/btg/btg-mockup-pic.png) fixed;
+}
+.gallery .thumb:nth-child(5) {
+    background: center / cover no-repeat url(assets/img/santander/encolador-proto.png) fixed;
+}
+.gallery .thumb:nth-child(6) {
+    background: top / cover no-repeat url(assets/img/delta/delta.jpg) fixed;
 }
 
 .social {
@@ -277,6 +242,7 @@ body.delta p a {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
+/* MEDIA QUERIES */
 @media only screen and (min-width: 768px) {
     .gallery {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -285,6 +251,13 @@ body.delta p a {
     
     main .lead p {
         font-size: 8rem;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .navbar-expand-lg .navbar-nav .nav-link {
+        padding-right: 2rem;
+        padding-left: 2rem;
     }
 }
 
