--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a:hover {
 .display-2,
 .display-3,
 .lead {
-    font-family: 'Mrs Sheppards', cursive;
+    font-family: 'Mrs Sheppards', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .caption {
@@ -90,6 +90,7 @@ nav ul li {
     justify-self: start;
     align-self: center;
     height: 28px;
+    width: 32px;
 }
 
 header {
