--- a/style.css
+++ b/style.css
@@ -1,30 +1,54 @@
 @import url('https://fonts.googleapis.com/css?family=Mrs+Sheppards&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('assets/Inter Web/inter.css');
 
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    --LIGHT: #FFFFFF;
+    --ITEM: #59bed4;
+    --DARKGLOW: #131A1F;
+    --RETROLIGHT: #A799CC;
+    --RETRODARK: #161122;
+    --mediumgreen: #77dd86;
+    --darkgreen: #228732;
 }
 
 body {
-    background-color: #170727;
-    color: #00EAAD;
-    /* font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* background-color: #170727; */
+    background-color: var(--LIGHT);
+    /* color: #00EAAD; */
+    color: var(--DARKGLOW);
+    font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+}
+
+.dots {
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 16 16' style='enable-background:new 0 0 16 16' xml:space='preserve'%3E%3Crect width='16' fill='none' height='16'/%3E%3Crect x='0' y='0' fill='white' width='1' height='1'/%3E%3C/svg%3E);
+    background-size: 43px;
+    opacity: .35;
 }
 
 a {
-    color: #00EAAD;
+    color: var(--darkgreen) !important;
+    transition: all ease-in 0.15s;
+    border-bottom: 1px solid transparent;
 }
 
 a:hover {
-    color: #00EAAD;
+    color: var(--LIGHT) !important;
+    /* text-decoration: underline !important; */
+    border-bottom: 1px solid var(--ITEM);
 }
 
-.display-1,
-.display-2,
-.display-3,
-.lead {
-    font-family: 'Mrs Sheppards', cursive;
+a:active,
+a.active {
+    color: #00EAAD;
+    text-decoration: underline;
 }
 
 .caption {
@@ -32,6 +56,10 @@ a:hover {
 }
 
 /* OVERRIDE */
+.container {
+
+}
+
 .bg-dark {
     background-color: transparent !important;
 }
@@ -50,8 +78,13 @@ nav {
     font-size: 1.2rem;
 }
 
-.navbar-light .navbar-brand {
-    color: white !important;
+.navbar-light .navbar-brand,
+.navbar-dark .navbar-nav .active>.nav-link,
+.navbar-dark .navbar-nav .nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show>.nav-link {
+    color: var(--darkgreen);
 }
 
 /* 
@@ -116,7 +149,7 @@ footer {
 
 header.lead {
     display: block;
-    height: 65vh;
+    height: calc(100vh - 76px);
     /* margin-top: 120px; */
     text-align: center;
     /* vertical-align: middle; */
@@ -125,12 +158,32 @@ header.lead {
 }
 
 main .lead p {
-    font-size: 4rem;
+    font-size: 2.5rem;
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
-    text-shadow: violet 0 6px 0;
-    text-align: center;
+    /* text-shadow: violet 0 6px 0; */
+    text-align: left;
+    font-weight: 600;
+}
+
+.lightson {
+    text-shadow:    0px 0px 0px rgba(0, 190, 212, 0.35),
+                    0px 0px 0px rgba(0, 190, 212, 0.1),
+                    0px 0px 0px rgb(255, 255, 255);
+
+    transition: all ease-in 0.25s;
+}
+
+.lightson:hover {
+    /* text-shadow:    0px 11px 5px rgba(0, 190, 212, 0.35),
+                    10px 20px 5px rgba(0, 190, 212, 0.1),
+                    0px 0px 60px rgba(0, 190, 212, 1); */
+    color: var(--DARKGLOW) !important;
+    text-shadow: 
+                    0px 5px 5px rgba(0, 190, 212, 0.35),
+                    20px 10px 2px rgba(0, 190, 212, 0.1),
+                    0px 0px 40px rgba(0, 190, 212, 1);
 }
 
 body.btg {
@@ -162,7 +215,7 @@ body.delta p a {
     text-decoration: underline;
 }
 
-.gallery {
+#gallery {
     display: grid;
     grid-area: main;
     grid-column-gap: 3px;
@@ -172,7 +225,7 @@ body.delta p a {
     overflow: hidden;
 }
 
-.gallery .thumb {
+#gallery .thumb {
     align-self: auto;
     background-color: white;
     border-radius: 2px;
@@ -181,7 +234,7 @@ body.delta p a {
     overflow: hidden;
 }
 
-.gallery .thumb a {
+#gallery .thumb a {
     color: white;
     font-size: 1.6rem;
     font-weight: 700;
@@ -195,29 +248,29 @@ body.delta p a {
     background-image: linear-gradient(180deg, rgba(249, 83, 198, 0.3) 0%, rgba(185, 29, 115, 1) 100%);
 }
 
-.gallery .thumb a:hover {
+#gallery .thumb a:hover {
     background-color: rgba(238, 130, 238, 0.8);
     color: white;
     top: -2px;
     transition: all 0.6s ease;
 }
 
-.gallery .thumb:nth-child(1) {
+#gallery .thumb:nth-child(1) {
     background: bottom center / cover no-repeat url(assets/img/lg/lg-article.png) fixed;
 }
-.gallery .thumb:nth-child(2) {
+#gallery .thumb:nth-child(2) {
     background: center / cover no-repeat url(assets/img/pos/pos-mock-1.jpg) fixed;
 }
-.gallery .thumb:nth-child(3) {
+#gallery .thumb:nth-child(3) {
     background: center / cover no-repeat url(assets/img/bio/clinicalBIO-3.png) fixed;
 }
-.gallery .thumb:nth-child(4) {
+#gallery .thumb:nth-child(4) {
     background: center / cover no-repeat url(assets/img/btg/btg-mockup-pic.png) fixed;
 }
-.gallery .thumb:nth-child(5) {
+#gallery .thumb:nth-child(5) {
     background: center / cover no-repeat url(assets/img/santander/encolador-proto.png) fixed;
 }
-.gallery .thumb:nth-child(6) {
+#gallery .thumb:nth-child(6) {
     background: top / cover no-repeat url(assets/img/delta/delta.jpg) fixed;
 }
 
@@ -244,14 +297,14 @@ body.delta p a {
 
 /* MEDIA QUERIES */
 @media only screen and (min-width: 768px) {
-    .gallery {
+    #gallery {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr;
     }
     
-    main .lead p {
-        font-size: 8rem;
-    }
+    /* main .lead p {
+        font-size: 2rem;
+    } */
 }
 
 @media only screen and (min-width: 992px) {
@@ -264,5 +317,34 @@ body.delta p a {
 @media only screen and (min-width: 1025) {
     .gallery .thumb a {
         color: transparent;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: var(--DARKGLOW);
+        color: var(--LIGHT);
+        /* background: linear-gradient(90deg, var(--RETRODARK) 61px, transparent 1%) center, linear-gradient(var(--RETRODARK) 61px, transparent 1%) center, var(--RETROLIGHT); */
+        background-image: radial-gradient(var(--ITEM) 1%, transparent 0);
+        background-size: 62px 62px;
+    }
+    a {
+        color: var(--ITEM) !important;
+    }
+    
+    a:hover,
+    a:active,
+    a.active {
+        color: var(--LIGHT);
+    }
+    .navbar-light .navbar-brand {
+        /* color: #ffffff !important; */
+    }
+    img {
+        opacity: .75;
+        transition: opacity .5s ease-in-out;
+    }
+    img:hover {
+        opacity: 1;
     }
 }
