--- a/style.css
+++ b/style.css
@@ -1,11 +1,32 @@
 @import url('https://fonts.googleapis.com/css?family=Mrs+Sheppards&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-@import url('assets/Inter Web/inter.css');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap');
+
+
+@font-face {
+    font-family: Migra;
+    src: url("assets/fonts/Migra-Extralight.otf") format("opentype");
+}
+
+@font-face {
+    font-family: MigraBold;
+    src: url("assets/fonts/Migra-Extrabold.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'DrukWide';
+    src: url("assets/fonts/DrukWide-Medium.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: 'DrukSuperC';
+    src: url("assets/fonts/DrukCond-Super.ttf") format("truetype");
+}
 
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    --LIGHT: #FFFFFF;
+    --LIGHT: #BCBCB0;
     --ITEM: #59bed4;
     --DARKGLOW: #131A1F;
     --RETROLIGHT: #A799CC;
@@ -19,7 +40,7 @@ body {
     background-color: var(--LIGHT);
     /* color: #00EAAD; */
     color: var(--DARKGLOW);
-    font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     /* font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 
@@ -34,15 +55,17 @@ body {
 }
 
 a {
-    color: var(--darkgreen) !important;
+    color: var(--RETRODARK) !important;
     transition: all ease-in 0.15s;
     border-bottom: 1px solid transparent;
 }
 
 a:hover {
-    color: var(--LIGHT) !important;
+    /* color: var(--LIGHT) !important; */
     /* text-decoration: underline !important; */
-    border-bottom: 1px solid var(--ITEM);
+    color: var(--DARKGLOW) !important;
+    opacity: 0.5;
+    border-bottom: 1px solid var(--DARKGLOW);
 }
 
 a:active,
@@ -148,6 +171,7 @@ footer {
 }
 
 header.lead {
+    font-family: 'MigraBold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: block;
     height: calc(100vh - 76px);
     /* margin-top: 120px; */
@@ -158,7 +182,8 @@ header.lead {
 }
 
 main .lead p {
-    font-size: 2.5rem;
+    /* font-size: 2.5rem; */
+    font-size: 6rem;
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
@@ -166,6 +191,10 @@ main .lead p {
     text-align: left;
     font-weight: 600;
 }
+
+/* ------------------------- */
+/* ------ GLOW EFFECT ------ */
+/* ------------------------- */
 
 .lightson {
     text-shadow:    0px 0px 0px rgba(0, 190, 212, 0.35),
@@ -320,7 +349,11 @@ body.delta p a {
     }
 }
 
-@media (prefers-color-scheme: dark) {
+@media only screen and (min-width: 1200px) {
+
+}
+
+@media (prefers-color-scheme: light) {
     body {
         background-color: var(--DARKGLOW);
         color: var(--LIGHT);
@@ -347,4 +380,61 @@ body.delta p a {
     img:hover {
         opacity: 1;
     }
+}
+
+
+.poster {
+    display: grid;
+    grid-template-columns: repeat(33, 1fr);
+    grid-template-rows: repeat(16, 1fr);
+    width: 100%;
+    height: 100vh;
+    background: none;
+}
+.b-one {
+    grid-column: 1/4;
+    grid-row: 11/15;
+}
+.b-two {
+    grid-column: 4/12;
+    grid-row: 6/8;
+}
+.b-three {
+    grid-column: 16/18;
+    grid-row: 8/11;
+}
+.b-four {
+    grid-column: 11/30;
+    grid-row: 15/17;
+}
+.b-five {
+    grid-column: 30/34;
+    grid-row: 1/11;
+}
+.textblock {
+    grid-column: 6/28;
+    grid-row-end: 14;
+}
+.textblock__caption {
+    font-size: 12px;
+}
+
+
+.names {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(10px, 200px));
+    grid-column-gap: 20px;
+    grid-auto-rows: minmax(20px, auto);
+}
+.names p {
+    font-size: 22px;
+    line-height: 26px;
+    font-weight: bold;
+    margin: 0;
+}
+.names span {
+    font-size: 12px;
+    line-height: 22px;
+    align-self: end;
+    text-align: right;
 }
