--- a/style.css
+++ b/style.css
@@ -26,7 +26,10 @@
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    --LIGHT: #BCBCB0;
+
+    /* COLOR VARIABLES */
+    --PURE: #ffffff;
+    --LIGHT: #cecece;
     --ITEM: #59bed4;
     --DARKGLOW: #131A1F;
     --RETROLIGHT: #A799CC;
@@ -37,7 +40,7 @@
 
 body {
     /* background-color: #170727; */
-    background-color: var(--LIGHT);
+    background-color: var(--PURE);
     /* color: #00EAAD; */
     color: var(--DARKGLOW);
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -65,7 +68,7 @@ a:hover {
     /* text-decoration: underline !important; */
     color: var(--DARKGLOW) !important;
     opacity: 0.5;
-    border-bottom: 1px solid var(--DARKGLOW);
+    border-bottom: 1px solid var(--mediumgreen);
 }
 
 a:active,
@@ -96,9 +99,18 @@ nav {
     /* margin-left: 0.5rem; */
 }
 
-.navbar {
+.navbar { 
     padding: 1rem 2rem;
     font-size: 1.2rem;
+}
+
+.navbar-dark .navbar-toggler {
+    color: var(--DARKGLOW);
+    border-color: var(--DARKGLOW);
+}
+
+.navbar-toggler:focus, .navbar-toggler:hover {
+    opacity: 0.5;
 }
 
 .navbar-light .navbar-brand,
@@ -108,6 +120,10 @@ nav {
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show>.nav-link {
     color: var(--darkgreen);
+}
+
+.navbar-dark .navbar-toggler-icon {
+
 }
 
 /* 
@@ -135,10 +151,10 @@ nav {
 } */
 
 nav ul li {
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(1fr, 1fr, 1fr);
-    grid-column-gap: 15px;
-    text-align: right;
+    grid-column-gap: 15px; */
+    /* text-align: right; */
 }
 
 /* GENERAL STYLES */
@@ -148,12 +164,12 @@ nav ul li {
     height: 28px;
 }
 
-header {
+/* header {
     grid-area: header;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+} */
 
 main {
     margin-left: 15%;
@@ -171,9 +187,10 @@ footer {
 }
 
 header.lead {
-    font-family: 'MigraBold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-family: 'Migra', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: block;
-    height: calc(100vh - 76px);
+    height: 50vh;
     /* margin-top: 120px; */
     text-align: center;
     /* vertical-align: middle; */
@@ -182,15 +199,20 @@ header.lead {
 }
 
 main .lead p {
-    /* font-size: 2.5rem; */
-    font-size: 6rem;
+    font-size: 4rem;
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
     /* text-shadow: violet 0 6px 0; */
     text-align: left;
-    font-weight: 600;
+    /* font-weight: 600; */
 }
+
+.navbar .in .nav li {
+    display: block;
+    float: none;
+    width: 100%;
+ }
 
 /* ------------------------- */
 /* ------ GLOW EFFECT ------ */
@@ -244,7 +266,7 @@ body.delta p a {
     text-decoration: underline;
 }
 
-#gallery {
+/* #gallery {
     display: grid;
     grid-area: main;
     grid-column-gap: 3px;
@@ -301,6 +323,57 @@ body.delta p a {
 }
 #gallery .thumb:nth-child(6) {
     background: top / cover no-repeat url(assets/img/delta/delta.jpg) fixed;
+} */
+
+#clients .clients-wrap {
+    border-top: 1px solid var(--mediumgreen);
+    border-left: 1px solid var(--mediumgreen);
+    border-top: 1px solid transparent;
+    border-left: 1px solid transparent;
+    margin-bottom: 30px
+}
+
+#clients .client-logo {
+    padding: 64px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border-right: 1px solid var(--mediumgreen);
+    border-bottom: 1px solid var(--mediumgreen);
+    border-right: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    overflow: hidden;
+    background: transparent;
+    height: 160px;
+}
+
+#clients img {
+    transition: all 0.4s ease-in-out
+}
+
+.bio {
+    background: center / cover no-repeat url(assets/img/bg-video-snow.webp) fixed;
+    background-color: var(--RETRODARK);
+}
+
+.bio p {
+    color: var(--mediumgreen);
+    font-size: 2.25rem;
+    line-height: 2.8rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 1rem auto;
+    padding: 20vh 2rem;
+    height: 100%;
 }
 
 .social {
@@ -326,31 +399,43 @@ body.delta p a {
 
 /* MEDIA QUERIES */
 @media only screen and (min-width: 768px) {
-    #gallery {
+    /* #gallery {
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr;
-    }
+    } */
     
     /* main .lead p {
         font-size: 2rem;
     } */
+
+    header.lead {
+        height: calc(75vh - 76px);
+    }
 }
 
 @media only screen and (min-width: 992px) {
+
+    main .lead p {
+        font-size: 6rem;
+    }
+
     .navbar-expand-lg .navbar-nav .nav-link {
         padding-right: 2rem;
         padding-left: 2rem;
     }
 }
 
-@media only screen and (min-width: 1025) {
-    .gallery .thumb a {
+@media only screen and (min-width: 1024px) {
+
+    /* .gallery .thumb a {
         color: transparent;
-    }
+    } */
 }
 
 @media only screen and (min-width: 1200px) {
-
+    main .lead p {
+        font-size: 10rem;
+    }
 }
 
 @media (prefers-color-scheme: light) {
@@ -382,8 +467,7 @@ body.delta p a {
     }
 }
 
-
-.poster {
+.lead {
     display: grid;
     grid-template-columns: repeat(33, 1fr);
     grid-template-rows: repeat(16, 1fr);
@@ -418,7 +502,9 @@ body.delta p a {
 .textblock__caption {
     font-size: 12px;
 }
-
+.textblock__subheader {
+    font-weight: 700;
+}
 
 .names {
     display: grid;
@@ -438,3 +524,84 @@ body.delta p a {
     align-self: end;
     text-align: right;
 }
+
+.footer {
+    margin-top: 3rem;
+}
+
+.divider {
+    border-top: 2px solid;
+}
+
+.box {
+    /* width: auto; */
+    height: 75vh;
+    /* position: relative;
+    margin: 0 auto;
+    display: inline-block; */
+    /* margin: 0 auto; */
+  }
+  
+  .element {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+    border-radius: 8px;
+    opacity: 0;
+    animation: anim 2s infinite;
+  }
+  
+  .element:nth-child(1) {
+    background-color: lightyellow;
+    background: bottom center / cover no-repeat url(assets/img/lg/lg-article.png);
+    animation-delay: 0s;
+  }
+  
+  .element:nth-child(2) {
+    background-color: lightgreen;
+    background: center / cover no-repeat url(assets/img/pos/pos-mock-1.jpg);
+    animation-delay: 2s;
+  }
+  .element:nth-child(3) {
+    background-color: pink;
+    background: center / cover no-repeat url(assets/img/bio/clinicalBIO-3.png);
+    animation-delay: 4s;
+  }
+  .element:nth-child(4) {
+    background-color: lightblue;
+    background: center / cover no-repeat url(assets/img/btg/btg-mockup-pic.png);
+    animation-delay: 6s;
+  }
+  .element:nth-child(5) {
+    background-color: coral;
+    background: center / cover no-repeat url(assets/img/santander/encolador-proto.png);
+    animation-delay: 8s;
+  }
+  .element:nth-child(6) {
+    background-color: aliceblue;
+    background: top / cover no-repeat url(assets/img/delta/delta.jpg);
+    animation-delay: 10s;
+  }
+  
+  .element:nth-last-child(3):first-child, 
+  .element:nth-last-child(3):first-child ~ .element {
+    animation-duration: 6s;
+  }
+  
+  .element:nth-last-child(6):first-child, 
+  .element:nth-last-child(6):first-child ~ .element {
+    animation-duration: 12s;
+  }
+  
+  .element:nth-last-child(9):first-child, 
+  .element:nth-last-child(9):first-child ~ .element {
+    animation-duration: 18s;
+  }
+  
+  @keyframes anim {
+    0% { opacity: 0; z-index: 100;}
+    15% { opacity: 1;}
+    50% { opacity: 1;}
+    100% { opacity: 0; z-index: 1;}
+  }
