--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ body.delta p a {
     text-decoration: underline;
 }
 
-/* #gallery {
+#gallery {
     display: grid;
     grid-area: main;
     grid-column-gap: 3px;
@@ -284,46 +284,6 @@ body.delta p a {
     text-align: center;
     overflow: hidden;
 }
-
-#gallery .thumb a {
-    color: white;
-    font-size: 1.6rem;
-    font-weight: 700;
-    text-decoration: none;
-    width: 100%;
-    height: 55vh;
-    display: grid;
-    align-content: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    background-image: linear-gradient(180deg, rgba(249, 83, 198, 0.3) 0%, rgba(185, 29, 115, 1) 100%);
-}
-
-#gallery .thumb a:hover {
-    background-color: rgba(238, 130, 238, 0.8);
-    color: white;
-    top: -2px;
-    transition: all 0.6s ease;
-}
-
-#gallery .thumb:nth-child(1) {
-    background: bottom center / cover no-repeat url(assets/img/lg/lg-article.png) fixed;
-}
-#gallery .thumb:nth-child(2) {
-    background: center / cover no-repeat url(assets/img/pos/pos-mock-1.jpg) fixed;
-}
-#gallery .thumb:nth-child(3) {
-    background: center / cover no-repeat url(assets/img/bio/clinicalBIO-3.png) fixed;
-}
-#gallery .thumb:nth-child(4) {
-    background: center / cover no-repeat url(assets/img/btg/btg-mockup-pic.png) fixed;
-}
-#gallery .thumb:nth-child(5) {
-    background: center / cover no-repeat url(assets/img/santander/encolador-proto.png) fixed;
-}
-#gallery .thumb:nth-child(6) {
-    background: top / cover no-repeat url(assets/img/delta/delta.jpg) fixed;
-} */
 
 #clients .clients-wrap {
     border-top: 1px solid var(--mediumgreen);
