--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap');
 
 /*--------------------------------------------------------------
@@ -29,8 +28,17 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6, .font-heading {
   font-family: 'Inter', sans-serif;
-  /* font-weight: 700;
-  font-style: italic; */
+  font-weight: 700;
+}
+
+.visually-hidden {
+  clip-path: inset(100%);
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
 .heading {
@@ -149,24 +157,6 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   visibility: visible;
 }
 
-/* .testimonial-wrap {
-  padding: 50px 50px 80px 50px;
-  background: #eceff2;
-}
-.testimonial-wrap .testimonial {
-  text-align: center;
-  max-width: 500px;
-  margin: 0 auto;
-}
-.testimonial-wrap .testimonial img {
-  border-radius: 50%;
-  width: 120px;
-  margin: 0 auto 30px auto;
-}
-.testimonial-wrap .testimonial blockquote p {
-  font-size: 20px;
-} */
-
 .h3 {
   font-size: 1.4rem;
 }
@@ -273,45 +263,6 @@ h1, h2, h3, h4, h5, h6, .font-heading {
 .services h4 {
   padding-top: 10px;
 }
-
-/* Contact Form */
-/* .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-.php-email-form .error-message br + br {
-  margin-top: 25px;
-}
-.php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-.php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-.php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  -webkit-animation: animate-loading 1s linear infinite;
-  animation: animate-loading 1s linear infinite;
-} */
 
 @-webkit-keyframes animate-loading {
   0% {
@@ -540,14 +491,5 @@ h1, h2, h3, h4, h5, h6, .font-heading {
   a:active,
   a.active {
       color: var();
-  }
-  .navbar-light .navbar-brand {
-  }
-  img {
-      /* opacity: .75;
-      transition: opacity .5s ease-in-out; */
-  }
-  img:hover {
-      /* opacity: 1; */
   }
 }
